--- a/thot-console/pom.xml
+++ b/thot-console/pom.xml
@@ -71,5 +71,10 @@
 			<artifactId>jline</artifactId>
 			<version>2.14.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 </project>
