--- a/thot-akka/pom.xml
+++ b/thot-akka/pom.xml
@@ -45,8 +45,24 @@ See: http://akka.io/</description>
 			<artifactId>akka-actor_2.12</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-cluster_2.12</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-cluster-metrics_2.12</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.beryx</groupId>
 			<artifactId>text-io</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.heliosphere.athena</groupId>
+			<artifactId>athena-base</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
 		</dependency>
 	</dependencies>
 </project>
