--- a/thot-parent/pom.xml
+++ b/thot-parent/pom.xml
@@ -146,18 +146,23 @@
 
 	</build>
 
-	<repositories>
+	<distributionManagement>
 		<repository>
+			<uniqueVersion>false</uniqueVersion>
 			<id>heliosphere-public</id>
 			<name>Heliosphere Releases</name>
 			<url>http://83.153.27.91:9086/nexus/content/groups/public</url>
+			<layout>default</layout>
 		</repository>
-		<repository>
+		<snapshotRepository>
+			<uniqueVersion>true</uniqueVersion>
 			<id>heliosphere-snapshot</id>
 			<name>Heliosphere Snapshots</name>
 			<url>http://83.153.27.91:9086/nexus/content/groups/public-snapshots</url>
-		</repository>
-	</repositories>
+			<layout>legacy</layout>
+		</snapshotRepository>
+
+	</distributionManagement>
 
 	<dependencyManagement>
 		<dependencies>
