Added packages and resources.

--- a/thot-akka/src/main/resources/config/cluster/chat/application.conf
+++ b/thot-akka/src/main/resources/config/cluster/chat/application.conf
@@ -15,8 +15,8 @@ akka {
 
   cluster {
     seed-nodes = [
-      "akka.tcp://HeliosphereChatSystem@127.0.0.1:2551",
-      "akka.tcp://HeliosphereChatSystem@127.0.0.1:2552"
+      "akka.tcp://HeliosphereSystem@127.0.0.1:2551",
+      "akka.tcp://HeliosphereSystem@127.0.0.1:2552"
       ]
       
     roles = ["seed"]
@@ -35,7 +35,10 @@ akka {
 akka.cluster.metrics.enabled=off
 
 # Enable metrics extension in akka-cluster-metrics.
-akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
+akka.extensions = [
+	"akka.cluster.metrics.ClusterMetricsExtension",
+	"akka.cluster.client.ClusterClientReceptionist"
+]
 
 # Sigar native library extract location during tests.
 # Note: use per-jvm-instance folder when running multiple jvm on one host. 
