--- a/thot-akka/pom.xml
+++ b/thot-akka/pom.xml
@@ -53,6 +53,10 @@ See: http://akka.io/</description>
 			<artifactId>akka-cluster-metrics_2.12</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-cluster-tools_2.12</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.beryx</groupId>
 			<artifactId>text-io</artifactId>
 		</dependency>
