--- a/thot-parent/pom.xml
+++ b/thot-parent/pom.xml
@@ -76,7 +76,7 @@
 		</snapshotRepository>
 
 	</distributionManagement>
-		
+
 	<build>
 
 		<pluginManagement>
@@ -326,6 +326,11 @@
 				<version>2.5.2</version>
 			</dependency>
 			<dependency>
+				<groupId>com.typesafe.akka</groupId>
+				<artifactId>akka-cluster-tools_2.12</artifactId>
+				<version>2.5.2</version>
+			</dependency>
+			<dependency>
 				<groupId>com.googlecode.lanterna</groupId>
 				<artifactId>lanterna</artifactId>
 				<version>3.0.0-rc1</version>
@@ -367,5 +372,7 @@
 		<module>../thot-spring</module>
 		<module>../thot-akka</module>
 		<module>../thot-console</module>
+		
+		<module>../thot-quasar</module>
 	</modules>
 </project>
