--- a/thot-akka/pom.xml
+++ b/thot-akka/pom.xml
@@ -68,5 +68,9 @@ See: http://akka.io/</description>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 </project>
