Implemented lot of messages.
Signed-off-by: Resse Christophe <christophe.resse@gmail.com>

--- a/thot-akka/src/main/resources/config/terminal/terminal-1.properties
+++ b/thot-akka/src/main/resources/config/terminal/terminal-1.properties
@@ -9,7 +9,7 @@ textio.prompt.font.family = Menlo
 textio.prompt.font.size = 12
 textio.prompt.bold = true
 textio.input.color = #FFF0A4
-textio.prompt.color = #FFF0A4
+textio.prompt.color = #30A73A
 textio.pane.title = Heliosphere Terminal
 textio.pane.icon.file = /icons/512.icns
 textio.pane.icon.resource = /icons/project.gif
