--- a/thot-akka/src/main/resources/config/terminal/terminal-1.properties
+++ b/thot-akka/src/main/resources/config/terminal/terminal-1.properties
@@ -1,15 +1,15 @@
 ##
 # Text IO Console properties
 ##
-textio.input.font.family = Menlo Regular
+textio.input.font.family = Monaco
 textio.input.font.size = 12
 textio.input.bold = true
 textio.pane.bgcolor = #14773D
-textio.prompt.font.family = Menlo
+textio.prompt.font.family = Monaco
 textio.prompt.font.size = 12
 textio.prompt.bold = true
 textio.input.color = #FFF0A4
-textio.prompt.color = #30A73A
+textio.prompt.color = #FFEF94
 textio.pane.title = Heliosphere Terminal
 textio.pane.icon.file = /icons/512.icns
 textio.pane.icon.resource = /icons/project.gif
