--- a/thot-akka/src/main/resources/config/terminal/terminal-2.properties
+++ b/thot-akka/src/main/resources/config/terminal/terminal-2.properties
@@ -1,7 +1,7 @@
 ##
 # Text IO Console properties
 ##
-textio.input.font.family = Menlo Regular
+textio.input.font.family = Menlo
 textio.input.font.size = 12
 textio.input.bold = true
 textio.pane.bgcolor = #224FBD
