--- a/thot-akka/src/main/resources/config/terminal/terminal-discussion.properties
+++ b/thot-akka/src/main/resources/config/terminal/terminal-discussion.properties
@@ -1,11 +1,11 @@
 ##
 # Text IO Console properties
 ##
-textio.input.font.family = Menlo Regular
+textio.input.font.family = Monaco
 textio.input.font.size = 12
 textio.input.bold = true
 textio.pane.bgcolor = #000000
-textio.prompt.font.family = Menlo
+textio.prompt.font.family = Monaco
 textio.prompt.font.size = 12
 textio.prompt.bold = true
 textio.input.color = #FFFFFF
