Reference of the newly created thot-jpa project.
Signed-off-by: Resse Christophe <christophe.resse@gmail.com>

--- a/thot-parent/pom.xml
+++ b/thot-parent/pom.xml
@@ -374,5 +374,8 @@
 		<module>../thot-console</module>
 		
 		<module>../thot-quasar</module>
+		<module>../thot-jme</module>
+		
+		<module>../thot-jpa</module>
 	</modules>
 </project>
